2000-12-12  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-fontstyle.c (html_engine_set_color): if color ==
	NULL use default Text color

	* htmltablecell.c (calc_preferred_width): implemented
	calc_preferred_width

	* htmlengine-edit-movement.c (html_engine_forward_word): fixed one
	char word case
	(html_engine_backward_word): make it dual to
	html_engine_forward_word

2000-12-12  Iain Holmes  <iain@helixcode.com>

	* gtkhtml.c (on_object): Emit the ON_URL signal when there is no object.

2000-12-12  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (draw): use pixel size for cell content panel
	(calc_column_width_template): take care for cspan
	(calc_column_width_step): likewise, calc exactly
	(divide_into_percented): calc exactly

2000-12-12  Larry Ewing  <lewing@helixcode.com>

	* htmlclueflow.c (draw): fix list item marker position tweak and
	rounding slightly.

2000-12-11  Radek Doulik  <rodo@helixcode.com>

	* htmlprinter.c (draw_pixmap): let gnome-print do alpha stuff

	* htmlengine-print.c (html_engine_print_set_min_split_index): new
	helper setting function
	(print_all_pages): use min_split_index

	* htmlengine.h: added min_split_index for printing 

	* Makefile.am (testgtkhtml_SOURCES): move htmlurl.h here

	* htmlprinter.c (draw_panel): do shadings

	* htmltypes.h: removed HTMLURL

2000-12-10  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (forall): call func also on self

	* htmlcluev.c (find_free_area): break cycle if try_y == next_y to
	avoid infinite cycles

	* htmltable.c (calc_min_width): use pixel_size for specified_width
	(calc_preferred_width): likewise
	(html_table_set_max_width): likewise

2000-12-08  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (parse_object_params): make sure we parse the
	string once we have already removed TAG_ESCAPE so that param
	parsing works properly.

2000-12-08  Radek Doulik  <rodo@helixcode.com>

	* htmltable.c (get_bg_color): new method
	(draw): use parent color for border panel